# Anti-YouTube

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/: CRUD.py  app.py  crud.py  db.py  files.py  routers.py  schemas.py  send_emails.py  service.py  tasks.py
app/auth/: api.py  crud.py  models.py  permission.py  schemas.py  security.py  send_emails.py  service.py  tokens.py
app/categories/: api.py  crud.py  models.py  schemas.py  service.py
app/comments/: api.py  crud.py  models.py  schemas.py  send_emails.py  service.py
app/config/: __init__.py  config.docker.env  config.docker.example.env  config.example.env
app/videos/: api.py  crud.py  models.py  schemas.py  service.py
docker/nginx/: nginx.conf
docker/postgres/: init.sql
email-templates/src/: new_account.mjml  reset_password.mjml
scripts/: createsuperuser.py
tests/: __init__.py  auth_test.py  category_test.py  comments_test.py  video_test.py
