[tool.poetry]
name = "FastAPI AntiYouTube"
version = "0.3.0"
description = ""
authors = ["_Counter021_"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.68.0"}
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.22"
asyncpg = "^0.24.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
bcrypt = "^3.2.0"
passlib = "^1.7.4"
emails = "^0.6"
coverage = "^5.5"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
